--- a/Amicable.html
+++ b/Amicable.html
@@ -29,7 +29,7 @@
 		console.log(total1);
 		console.log(total2);
 
-		if (total1 == num2 && total2 == num1)
+		if ((total1 == num2 && total2 == num1) && num1 != num2)
 		{
 			isAmicable = true;
 		}
